; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/rmgrdesc/extr_nbtdesc.c_btree_identify.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/rmgrdesc/extr_nbtdesc.c_btree_identify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@XLR_INFO_MASK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"INSERT_LEAF\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"INSERT_UPPER\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"INSERT_META\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"SPLIT_L\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"SPLIT_R\00", align 1
@.str.5 = private unnamed_addr constant [7 x i8] c"VACUUM\00", align 1
@.str.6 = private unnamed_addr constant [7 x i8] c"DELETE\00", align 1
@.str.7 = private unnamed_addr constant [19 x i8] c"MARK_PAGE_HALFDEAD\00", align 1
@.str.8 = private unnamed_addr constant [12 x i8] c"UNLINK_PAGE\00", align 1
@.str.9 = private unnamed_addr constant [17 x i8] c"UNLINK_PAGE_META\00", align 1
@.str.10 = private unnamed_addr constant [8 x i8] c"NEWROOT\00", align 1
@.str.11 = private unnamed_addr constant [11 x i8] c"REUSE_PAGE\00", align 1
@.str.12 = private unnamed_addr constant [13 x i8] c"META_CLEANUP\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @btree_identify(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* null, i8** %3, align 8
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @XLR_INFO_MASK, align 4
  %6 = xor i32 %5, -1
  %7 = and i32 %4, %6
  switch i32 %7, label %21 [
    i32 139, label %8
    i32 137, label %9
    i32 138, label %10
    i32 132, label %11
    i32 131, label %12
    i32 128, label %13
    i32 140, label %14
    i32 136, label %15
    i32 130, label %16
    i32 129, label %17
    i32 134, label %18
    i32 133, label %19
    i32 135, label %20
  ]

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  br label %21

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %21

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %21

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %21

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %21

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  br label %21

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.6, i64 0, i64 0), i8** %3, align 8
  br label %21

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.7, i64 0, i64 0), i8** %3, align 8
  br label %21

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.8, i64 0, i64 0), i8** %3, align 8
  br label %21

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.9, i64 0, i64 0), i8** %3, align 8
  br label %21

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.10, i64 0, i64 0), i8** %3, align 8
  br label %21

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.11, i64 0, i64 0), i8** %3, align 8
  br label %21

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.12, i64 0, i64 0), i8** %3, align 8
  br label %21

21:                                               ; preds = %1, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8
  %22 = load i8*, i8** %3, align 8
  ret i8* %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
